Cleanup, Blockchain, Besu, Docker

--- a/Ethereum/AnvilSolidityPython.html
+++ b/Ethereum/AnvilSolidityPython.html
@@ -17,7 +17,7 @@
       <tbody>
         <tr>
         <td valign="bottom"><span id="ps-home"></span></td>
-        <td valign="bottom"><span id="home-a"><a id="home-a" href="https://www.polarsparc.com/">PolarSPARC</a></span></td>
+        <td valign="bottom"><span id="home-a"><a id="home-a" href="https://polarsparc.github.io/">PolarSPARC</a></span></td>
         </tr>
       </tbody>
     </table>
@@ -60,8 +60,8 @@
     <div id="para-div">
       <p>For this article, we will show how to setup a development environment for building, deploying, and testing Ethereum dApps.
         For the demonstration, we will use some aspects of the motor vehicle use-case that is described in the introductory article
-        <a href="https://www.polarsparc.com/xhtml/Blockchain.html" target="_blank"><span class="hi-yellow">Introduction to Blockchain
-        </span></a>.</p>
+        <a href="https://polarsparc.github.io/Blockchain/Blockchain.html" target="_blank"><span class="hi-yellow">Introduction to
+          Blockchain</span></a>.</p>
     </div>
     <br/>
     <div id="section-div">
@@ -70,8 +70,8 @@
     <div id="para-div">
       <p>The setup will be on a <span class="bold">Ubuntu 24.04 LTS</span> based Linux desktop.</p>
       <p>Ensure that the desktop has <span class="bold">Docker</span> installed and setup. Else, please refer to the article <a href
-        ="http://www.polarsparc.com/xhtml/Docker.html" target="_blank"><span class="hi-yellow">Introduction to Docker</span></a> for
-        additional help.</p>
+        ="http://polarsparc.github.io/Docker/Docker.html" target="_blank"><span class="hi-yellow">Introduction to Docker</span></a>
+        for additional help.</p>
       <p>In addition, ensure that the <span class="bold">Python</span> programming language (version 3.11 or above) is installed.</p>
     </div>
     <div id="para-div">
@@ -1121,7 +1121,7 @@ cb576101008083540402835291602001916102f4565b820191905f5260205f20905b815481529060
     <br/>
     <hr class="line-hr" />
     <div>
-      <a id="footer-a" href="https://www.polarsparc.com">&copy;&nbsp;PolarSPARC</a>
+      <a id="footer-a" href="https://polarsparc.github.io/">&copy;&nbsp;PolarSPARC</a>
     </div>
   </body>
 </html>
