--- a/Ethereum/BesuPrivateCliqueDocker.html
+++ b/Ethereum/BesuPrivateCliqueDocker.html
@@ -16,7 +16,7 @@
     <table borber="0">
       <tbody><tr>
         <td valign="bottom"><span id="ps-home"></span></td>
-        <td valign="bottom"><span id="home-a"><a id="home-a" href="https://www.polarsparc.com/">PolarSPARC</a></span></td>
+        <td valign="bottom"><span id="home-a"><a id="home-a" href="https://polarsparc.github.io/">PolarSPARC</a></span></td>
       </tr>
     </tbody></table>
     <br>
@@ -1336,7 +1336,7 @@ rpc-http-cors-origins=["*"]</pre>
     <br/>
     <hr class="line-hr" />
     <div>
-      <a id="footer-a" href="https://www.polarsparc.com">&copy;&nbsp;PolarSPARC</a>
+      <a id="footer-a" href="https://polarsparc.github.io/">&copy;&nbsp;PolarSPARC</a>
     </div>
   </body>
 </html>
