--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Security/OAuth2-OIDC.html.html"><span class="bold">Understanding
+          <p><a target="_blank" href="https://polarsparc.github.io/Security/OAuth2-OIDC.html"><span class="bold">Understanding
             OAuth2 and OpenID Connect</span></a></p>
         </li>
       </ul>
