Index, Docker, GenAI, Java

--- a/index.html
+++ b/index.html
@@ -43,11 +43,15 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Docker/Docker.html"><span class="bold">Introduction to Docker</span></a></p>
-        </li>
-        <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Docker/DockerModel.html"><span class="bold">Quick Bytes on Docker
             Model Runner</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Docker/DockerNVidia.html"><span class="bold">How-to Enable NVidia
+            GPU for Docker</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Docker/Docker.html"><span class="bold">Introduction to Docker</span></a></p>
         </li>
       </ul>
     </div>
@@ -64,6 +68,34 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Ethereum/BesuPrivateCliqueDocker.html"><span class="bold">Hyperledger
             Besu Private Network using Docker</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
+      <p>GenAI</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/GenAI/Llama-cpp.html"><span class="bold">Quick Primer on Llama.cpp
+            </span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/GenAI/Ollama.html"><span class="bold">Quick Primer on Ollama</span>
+            </a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
+      <p>Java</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Java/PragmaticSpringAI.html"><span class="bold">Pragmatic Bytes
+            on Spring AI</span></a></p>
         </li>
       </ul>
     </div>
