Langchain, Open-webui, Index

--- a/index.html
+++ b/index.html
@@ -82,6 +82,18 @@
             </span></a></p>
         </li>
         <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/GenAI/LangChainRecipes.html"><span class="bold">Common LangChain
+            Recipes</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/GenAI/LangChain.html"><span class="bold">Quick Primer on LangChain
+            </span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/GenAI/OpenWebUI.html"><span class="bold">Quick Primer on Open WebUI
+            with Ollama</span></a></p>
+        </li>
+        <li>
           <p><a target="_blank" href="https://polarsparc.github.io/GenAI/Ollama.html"><span class="bold">Quick Primer on Ollama</span>
             </a></p>
         </li>
