Calculus, DeepLearning, Index

--- a/index.html
+++ b/index.html
@@ -37,6 +37,22 @@
       </ul>
     </div>
     <div id="step-div">
+      <p>Deep Learning</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/DeepLearning-2.html"><span class="bold">Introduction
+            to Deep Learning - Part 2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/DeepLearning-1.html"><span class="bold">Introduction
+            to Deep Learning - Part 1</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
       <p>Docker</p>
     </div>
     <br/>
@@ -120,6 +136,14 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/CrossEntropy.html"><span class="bold">Understanding
             Cross Entropy</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/Calculus-2.html"><span class="bold">Introduction to
+            Calculus - Part 1</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/Calculus-1.html"><span class="bold">Introduction to
+            Calculus - Part 1</span></a></p>
         </li>
       </ul>
     </div>
