CNN, GAN, Index

--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/DL-GenAdversarial.html"><span class="bold">Deep Learning
+            - Generative Adversarial Network</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/DL-Convolutional.html"><span class="bold">Deep Learning
+            - Convolutional Neural Network</span></a></p>
+        </li>
+        <li>
           <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/DeepLearning-2.html"><span class="bold">Introduction
             to Deep Learning - Part 2</span></a></p>
         </li>
