GenAI, Python, VectorDB, Index

--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@
           <p><a target="_blank" href="https://polarsparc.github.io/GenAI/Ollama.html"><span class="bold">Quick Primer on Ollama</span>
             </a></p>
         </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/GenAI/PydanticAI.html"><span class="bold">Quick Primer on PydanticAI
+            </span></a></p>
+        </li>
       </ul>
     </div>
     <div id="step-div">
@@ -156,6 +160,22 @@
       </ul>
     </div>
     <div id="step-div">
+      <p>Python</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Python/Starlette.html"><span class="bold">Quick Primer on Starlette
+            </span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Python/Gradio.html"><span class="bold">Quick Primer on Gradio</span>
+            </a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
       <p>Security</p>
     </div>
     <br/>
@@ -164,6 +184,26 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Security/OAuth2-OIDC.html"><span class="bold">Understanding
             OAuth2 and OpenID Connect</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
+      <p>VectorDB</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/VectorDB/QB-PgVector.html"><span class="bold">Quick Bytes -
+            PgVector Vector Store</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/VectorDB/QB-Sqlite-Vec.html"><span class="bold">Quick Bytes -
+            Sqlite-Vec Vector Store</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/VectorDB/Milvus.html"><span class="bold">Hands-On with Milvus
+            Vector Database</span></a></p>
         </li>
       </ul>
     </div>
