GenAI, General, Java, Index

--- a/index.html
+++ b/index.html
@@ -125,6 +125,22 @@
           <p><a target="_blank" href="https://polarsparc.github.io/GenAI/PydanticAI.html"><span class="bold">Quick Primer on PydanticAI
             </span></a></p>
         </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/GenAI/LangGraph.html"><span class="bold">Quick Primer on LangGraph
+            </span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
+      <p>General</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/General/RaspberryPi-5.html"><span class="bold">PQuick Primer on
+            Raspberry Pi 5 Build</span></a></p>
+        </li>
       </ul>
     </div>
     <div id="step-div">
@@ -136,6 +152,18 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Java/PragmaticSpringAI.html"><span class="bold">Pragmatic Bytes
             on Spring AI</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Java/MethodHandle.html"><span class="bold">Quick Primer on Java
+            Method Handles</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Java/JavaCompiler.html"><span class="bold">Dynamic Code Generation
+            using Java Compiler API</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Java/JavaScripting.html"><span class="bold">Introduction to
+            Scripting in Java</span></a></p>
         </li>
       </ul>
     </div>
