--- a/index.html
+++ b/index.html
@@ -138,8 +138,16 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/General/RaspberryPi-5.html"><span class="bold">PQuick Primer on
+          <p><a target="_blank" href="https://polarsparc.github.io/General/RPi-5-Ollama.html"><span class="bold">Pi Day Special -
+            Ollama on Raspberry Pi 5</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/General/RaspberryPi-5.html"><span class="bold">Quick Primer on
             Raspberry Pi 5 Build</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://www.linkedin.com/pulse/mindset-aha-moment-bhaskar-swaminathan-chumc"><span class="bold">
+            Mindset - An 'Aha' Moment !</span></a></p>
         </li>
       </ul>
     </div>
