Chatbot, GenAI, Mathematics, Index

--- a/index.html
+++ b/index.html
@@ -37,6 +37,26 @@
       </ul>
     </div>
     <div id="step-div">
+      <p>Chatbot</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Chatbot/Rasa-3.html"><span class="bold">Hands-on Primer on Rasa
+            - Part 3</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Chatbot/Rasa-2.html"><span class="bold">Hands-on Primer on Rasa
+            - Part 2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Chatbot/Rasa-1.html"><span class="bold">Hands-on Primer on Rasa
+            - Part 1</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
       <p>Deep Learning</p>
     </div>
     <br/>
@@ -129,6 +149,10 @@
           <p><a target="_blank" href="https://polarsparc.github.io/GenAI/LangGraph.html"><span class="bold">Quick Primer on LangGraph
             </span></a></p>
         </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/GenAI/RunFlux.html"><span class="bold">Quick Tip :: Running Text-to-Image
+            Diffusion Model on a Local Machine</span></a></p>
+        </li>
       </ul>
     </div>
     <div id="step-div">
@@ -148,6 +172,10 @@
         <li>
           <p><a target="_blank" href="https://www.linkedin.com/pulse/mindset-aha-moment-bhaskar-swaminathan-chumc"><span class="bold">
             Mindset - An 'Aha' Moment !</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://www.linkedin.com/pulse/cautionary-reminder-major-updates-prod-bhaskar-swaminathan-msbfe">
+            <span class="bold">Cautionary Reminder on Major Updates to Prod !!!</span></a></p>
         </li>
       </ul>
     </div>
@@ -186,12 +214,48 @@
             Cross Entropy</span></a></p>
         </li>
         <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/UnivariateGaussian.html"><span class="bold">Univariate
+            Gaussian Distribution Derivation</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/EulersIdentity.html"><span class="bold">A Mathematical
+            Gem :: Euler's Identity</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/Trigonometry.html"><span class="bold">Introduction
+            to Trigonometry</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/BinomialTheorem.html"><span class="bold">Binomial
+            Theorem Unravelled</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/Calculus-3.html"><span class="bold">Introduction to
+            Calculus - Part 3</span></a></p>
+        </li>
+        <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/Calculus-2.html"><span class="bold">Introduction to
-            Calculus - Part 1</span></a></p>
+            Calculus - Part 2</span></a></p>
         </li>
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/Calculus-1.html"><span class="bold">Introduction to
             Calculus - Part 1</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/Statistics-2.html"><span class="bold">Introduction
+            to Statistics - Part 2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/Statistics-1.html"><span class="bold">Introduction
+            to Statistics - Part 1</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/Probability.html"><span class="bold">Introduction to
+            Probability</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Mathematics/Perms_Combs.html"><span class="bold">Introduction to
+            Permutations & Combinations</span></a></p>
         </li>
       </ul>
     </div>
