Links, Java, Index

--- a/Chatbot/Rasa-3.html
+++ b/Chatbot/Rasa-3.html
@@ -403,7 +403,7 @@ Epochs: 100%|||||||||||| 100/100 [00:25&lt;00:00,  3.93it/s, t_loss=1.04, i_acc=
       <div class="src-body-1">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   10 Nov 2024
 #
 
