--- a/GenAI/MCP.html
+++ b/GenAI/MCP.html
@@ -138,7 +138,7 @@ SSE_BASE_URL='http://192.168.1.25:8000/sse'</pre>
       <div class="gen-src-body">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   06 April 2025
 #
 
@@ -236,7 +236,7 @@ INFO 2025-04-13 09:54:41,773 - [AIMessage(content='{"code":301,"message":"Compou
       <div class="gen-src-body">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   06 April 2025
 #
 
@@ -291,7 +291,7 @@ if __name__ == '__main__':
       <div class="gen-src-body">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   06 April 2025
 #
 
@@ -411,7 +411,7 @@ INFO 2025-04-13 10:24:39,860 - [AIMessage(content='The compound interest for a p
       <div class="gen-src-body">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   12 April 2025
 #
 
@@ -456,7 +456,7 @@ if __name__ == '__main__':
       <div class="gen-src-body">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   12 April 2025
 #
 
@@ -579,7 +579,7 @@ INFO 2025-04-13 12:09:08,393 - [AIMessage(content='The system has a total of 62 
       <div class="gen-src-body">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   12 April 2025
 #
 
@@ -665,7 +665,7 @@ INFO:     Uvicorn running on http://192.168.1.25:8000 (Press CTRL+C to quit)</pr
       <div class="gen-src-body">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   12 April 2025
 #
 
