--- a/Java/JavaCompiler.html
+++ b/Java/JavaCompiler.html
@@ -38,7 +38,7 @@
       <p>Overview</p>
     </div>
     <div id="para-div">
-      <p>In one of the previous articles, we were introduced to <a href="http://polarsparc.github.io/Java/Scripting.html">Scripting
+      <p>In one of the previous articles, we were introduced to <a href="http://polarsparc.github.io/Java/JavaScripting.html">Scripting
         in Java</a>. It was one way of dynamically extending the capabilities of an application. Also, there is another efficient
         way of extending an application dynamically - by compiling and loading Java classes at runtime.</p>
     </div>
@@ -180,7 +180,7 @@ org.slf4j.simpleLogger.showThreadName=true</pre>
  * Name:   Filter
  * Author: Bhaskar S
  * Date:   01/18/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.jdk.compiler;
@@ -203,7 +203,7 @@ public interface Filter {
  * Name:   Filter
  * Author: Bhaskar S
  * Date:   01/18/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.jdk.compiler;
@@ -229,7 +229,7 @@ public class FilterEvenGt500 implements Filter {
  * Name:   ScriptVsCompiled
  * Author: Bhaskar S
  * Date:   01/18/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.jdk.compiler;
@@ -448,7 +448,7 @@ public class ScriptVsCompiled {
  * Name:   CompileMe
  * Author: Bhaskar S
  * Date:   01/18/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.jdk.compiler;
@@ -473,7 +473,7 @@ public class CompileMe {
  * Name:   BasicCompile
  * Author: Bhaskar S
  * Date:   01/18/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.jdk.compiler;
@@ -612,7 +612,7 @@ public class BasicCompile {
  * Name:   StringJavaFileObject
  * Author: Bhaskar S
  * Date:   01/18/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.jdk.compiler;
@@ -676,7 +676,7 @@ public class StringJavaFileObject extends SimpleJavaFileObject {
  * Name:   StringCompile
  * Author: Bhaskar S
  * Date:   01/18/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.jdk.compiler;
@@ -920,7 +920,7 @@ public class StringCompile {
  * Name:   ByteArrayJavaFileObject
  * Author: Bhaskar S
  * Date:   01/18/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.jdk.compiler;
@@ -981,7 +981,7 @@ public class ByteArrayJavaFileObject extends SimpleJavaFileObject {
  * Name:   ByteArrayClassLoader
  * Author: Bhaskar S
  * Date:   01/18/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.jdk.compiler;
@@ -1047,7 +1047,7 @@ public class ByteArrayClassLoader extends ClassLoader {
  * Name:   DynamicClassFileManager
  * Author: Bhaskar S
  * Date:   01/18/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.jdk.compiler;
@@ -1124,7 +1124,7 @@ public class DynamicClassFileManager &lt;FileManager&gt; extends ForwardingJavaF
  * Name:   DynamicCompiler
  * Author: Bhaskar S
  * Date:   01/18/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.jdk.compiler;
@@ -1198,7 +1198,7 @@ public class DynamicCompiler {
  * Name:   CompiledFilter
  * Author: Bhaskar S
  * Date:   01/18/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.jdk.compiler;
