--- a/Java/JavaScripting.html
+++ b/Java/JavaScripting.html
@@ -209,7 +209,7 @@ for (var i = 0; i &lt; num; i++) {
  * Name:   First
  * Author: Bhaskar S
  * Date:   01/18/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
  
 package com.polarsparc.scripting;
@@ -365,7 +365,7 @@ Print Hello Alice 10 times
  * Name:   Second
  * Author: Bhaskar S
  * Date:   01/18/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.scripting;
@@ -511,7 +511,7 @@ val = 429
  * Name:   Third
  * Author: Bhaskar S
  * Date:   01/18/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.scripting;
@@ -730,7 +730,7 @@ CD Amount: 12000
  * Name:   Fourth
  * Author: Bhaskar S
  * Date:   01/18/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.scripting;
@@ -865,7 +865,7 @@ public class Fourth {
  * Name:   Fifth
  * Author: Bhaskar S
  * Date:   01/18/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.scripting;
@@ -960,7 +960,7 @@ public class Fifth {
  * Name:   SixthHolder
  * Author: Bhaskar S
  * Date:   01/18/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.scripting;
@@ -1044,7 +1044,7 @@ public class SixthHolder {
  * Name:   Sixth
  * Author: Bhaskar S
  * Date:   01/18/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.scripting;
