--- a/Java/MethodHandle.html
+++ b/Java/MethodHandle.html
@@ -180,7 +180,7 @@ org.slf4j.simpleLogger.showThreadName=true</pre>
  * Name:   HelloWorld
  * Author: Bhaskar S
  * Date:   03/01/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
  
 package com.polarsparc.methodhandles;
@@ -230,7 +230,7 @@ public class HelloWorld {
  * Name:   HwLookupTest
  * Author: Bhaskar S
  * Date:   03/01/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.methodhandles.test;
@@ -313,7 +313,7 @@ public class HwLookupTest {
  * Name:   HwVarHandleTest
  * Author: Bhaskar S
  * Date:   03/01/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.methodhandles.test;
@@ -440,7 +440,7 @@ public class HwVarHandleTest {
  * Name:   HwMethodHandleTest
  * Author: Bhaskar S
  * Date:   03/01/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.methodhandles.test;
@@ -594,7 +594,7 @@ public class HwMethodHandleTest {
  * Name:   Transformer
  * Author: Bhaskar S
  * Date:   03/01/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.methodhandles;
@@ -619,7 +619,7 @@ public interface Transformer {
  * Name:   TransformerTest
  * Author: Bhaskar S
  * Date:   03/01/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.methodhandles.test;
