--- a/Java/PragmaticSpringAI.html
+++ b/Java/PragmaticSpringAI.html
@@ -331,7 +331,7 @@ spring.ai.ollama.chat.options.temperature=0.2</pre>
  * Name:   OllamaChatConfig
  * Author: Bhaskar S
  * Date:   06/19/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.springai.config;
@@ -362,7 +362,7 @@ public class OllamaChatConfig {
  * Name:   OllamaChatService
  * Author: Bhaskar S
  * Date:   06/19/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.springai.service;
@@ -414,7 +414,7 @@ public class OllamaChatService {
  * Name:   FirstSpringAiApplication
  * Author: Bhaskar S
  * Date:   06/19/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.springai;
@@ -573,7 +573,7 @@ spring.ai.ollama.chat.options.temperature=0.2</pre>
  * Name:   OllamaChatConfig
  * Author: Bhaskar S
  * Date:   06/19/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.springai.config;
@@ -603,7 +603,7 @@ public class OllamaChatConfig {
  * Name:   CapitalCity
  * Author: Bhaskar S
  * Date:   06/19/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.springai.model;
@@ -624,7 +624,7 @@ public record CapitalCity(String country, String city, float areaInSqft, long po
  * Name:   OllamaChatService
  * Author: Bhaskar S
  * Date:   06/19/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.springai.service;
@@ -677,7 +677,7 @@ public class OllamaChatService {
  * Name:   SecondSpringAiApplication
  * Author: Bhaskar S
  * Date:   06/19/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.springai;
@@ -742,7 +742,7 @@ public class SecondSpringAiApplication implements CommandLineRunner {
     <br/>
     <div id="para-div">
       <p>In the <span class="bold">Third</span> application, we will have the AI application leverage the vector database to store the
-        <a href="https://www.polarsparc.com/pdf/NVIDIA-4Q-2024.pdf" target="_blank"><span class="bold">Nvidia 4th Quarter 2024</span>
+        <a href="https://polarsparc.github.io/pdf/NVIDIA-4Q-2024.pdf" target="_blank"><span class="bold">Nvidia 4th Quarter 2024</span>
         </a> financial report and query the vector database to analyze it.</p>
     </div>
     <div id="step-div">
@@ -865,7 +865,7 @@ spring.ai.vectorstore.pgvector.dimensions=768</pre>
  * Name:   OllamaChatConfig
  * Author: Bhaskar S
  * Date:   06/19/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.springai.config;
@@ -895,7 +895,7 @@ public class OllamaChatConfig {
  * Name:   PgVectorService
  * Author: Bhaskar S
  * Date:   06/19/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.springai.service;
@@ -967,7 +967,7 @@ public class PgVectorService {
  * Name:   OllamaChatService
  * Author: Bhaskar S
  * Date:   06/19/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.springai.service;
@@ -1024,7 +1024,7 @@ public class OllamaChatService {
  * Name:   ThirdSpringAiApplication
  * Author: Bhaskar S
  * Date:   06/19/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.springai;
@@ -1221,7 +1221,7 @@ spring.ai.ollama.chat.options.temperature=0.2</pre>
  * Name:   OllamaCalculatorTools
  * Author: Bhaskar S
  * Date:   06/19/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.springai.util;
@@ -1259,7 +1259,7 @@ public class OllamaCalculatorTools {
  * Name:   OllamaChatConfig
  * Author: Bhaskar S
  * Date:   06/19/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.springai.config;
@@ -1296,7 +1296,7 @@ public class OllamaChatConfig {
  * Name:   OllamaChatService
  * Author: Bhaskar S
  * Date:   06/19/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.springai.service;
@@ -1352,7 +1352,7 @@ public class OllamaChatService {
  * Name:   FourthSpringAiApplication
  * Author: Bhaskar S
  * Date:   06/19/2025
- * Blog:   https://www.polarsparc.com
+ * Blog:   https://polarsparc.github.io
  */
 
 package com.polarsparc.springai;
