--- a/Python/Gradio.html
+++ b/Python/Gradio.html
@@ -87,7 +87,7 @@
       <div class="gen-src-body">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   23 Mar 2025
 #
 
@@ -180,7 +180,7 @@ To create a public link, set `share=True` in `launch()`.</pre>
       <div class="gen-src-body">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   23 Mar 2025
 #
 
@@ -261,7 +261,7 @@ To create a public link, set `share=True` in `launch()`.</pre>
       <div class="gen-src-body">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   23 Mar 2025
 #
 
@@ -342,7 +342,7 @@ if __name__ == '__main__':
       <div class="gen-src-body">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   29 Mar 2025
 #
 
@@ -411,7 +411,7 @@ if __name__ == '__main__':
       <div class="gen-src-body">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   29 Mar 2025
 #
 
@@ -490,7 +490,7 @@ if __name__ == '__main__':
       <div class="gen-src-body">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   29 Mar 2025
 #
 
@@ -560,7 +560,7 @@ if __name__ == '__main__':
       <div class="gen-src-body">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   29 Mar 2025
 #
 
@@ -645,7 +645,7 @@ if __name__ == '__main__':
       <div class="gen-src-body">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   30 Mar 2025
 #
 
@@ -722,7 +722,7 @@ if __name__ == '__main__':
       <div class="gen-src-body">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   30 Mar 2025
 #
 
