--- a/Python/Starlette.html
+++ b/Python/Starlette.html
@@ -94,7 +94,7 @@
       <div class="gen-src-body">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   06 April 2025
 #
 
@@ -200,7 +200,7 @@ Hello Starlette !!!</pre>
       <div class="gen-src-body">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   06 April 2025
 #
 
@@ -307,7 +307,7 @@ if __name__ == '__main__':
       <div class="gen-src-body">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   06 April 2025
 #
 
@@ -420,7 +420,7 @@ if __name__ == '__main__':
       <div class="gen-src-body">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   06 April 2025
 #
 import base64
@@ -579,7 +579,7 @@ if __name__ == '__main__':
       <div class="gen-src-body">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   06 April 2025
 #
 
