--- a/VectorDB/Milvus.html
+++ b/VectorDB/Milvus.html
@@ -50,13 +50,13 @@
       <p>With the rapid progress being made in the <span class="bold">Deep Learning</span> space, there is a need for a different
         approach to the storage and retrieval of the unstructured data objects.</p>
       <p>This is where the exciting world of <span class="hi-yellow">Vector Database</span>(s) come into play.</p>
-      <p>In the article <a href="https://www.polarsparc.com/xhtml/DL-Word2Vec.html" target="_blank"><span class="bold">Deep Learning
+      <p>In the article <a href="https://polarsparc.github.io/xhtml/DL-Word2Vec.html" target="_blank"><span class="bold">Deep Learning
         - Word Embeddings with Word2Vec</span></a>, we explained and demonstrated the approach to representing words as <span class=
         "bold">Vectors</span> in an n-dimensional space. Similar techniques exists, which can be applied to other unstructured data
         objects, such as, Audio, Images, Video, etc.</p>
       <p>In other words, a <span class="bold">Vector Database</span> persists unstructured data objects as their equivalent vector
         embeddings and indexes them for efficient and fast similarity searches
-        (<a href="https://www.polarsparc.com/xhtml/Document-Similarity-NLP.html" target="_blank"><span class="bold">Document
+        (<a href="https://polarsparc.github.io/xhtml/Document-Similarity-NLP.html" target="_blank"><span class="bold">Document
         Similarity</span></a>), in addition to supporting the traditional queries.</p>
     </div>
     <div id="para-div">
@@ -153,7 +153,7 @@
         <a href="http://polarsparc.github.io/Docker/Docker.html" target="_blank"><span class="bold">Introduction to Docker</span></a>
         for help.</p>
       <p>Finally, ensure that <span class="bold">Docker Compose</span> is installed and setup. Else, refer to the article
-        <a href="http://www.polarsparc.com/xhtml/DockerCompose.html" target="_blank"><span class="bold">Introduction to Docker Compose</span></a>
+        <a href="http://polarsparc.github.io/xhtml/DockerCompose.html" target="_blank"><span class="bold">Introduction to Docker Compose</span></a>
         for help.</p>
     </div>
     <div id="para-div">
@@ -720,7 +720,7 @@ for i, result in enumerate(results):
       <div class="gen-src-body">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   07 Oct 2023
 #
 
