--- a/VectorDB/QB-PgVector.html
+++ b/VectorDB/QB-PgVector.html
@@ -342,7 +342,7 @@ DOCS_DATASET='./data/leadership_books.csv'</pre>
       <div class="gen-src-body">
 <pre>#
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   11 May 2025
 #
 
