--- a/index.html
+++ b/index.html
@@ -201,6 +201,18 @@
           <p><a target="_blank" href="https://polarsparc.github.io/Java/JavaScripting.html"><span class="bold">Introduction to
             Scripting in Java</span></a></p>
         </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Java/JavaInvokes.html"><span class="bold">The JVM 'Invoke...'
+            Instructions</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Java/ByteBuddy.html"><span class="bold">Introduction to Byte
+            Buddy</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Java/JavaASM.html"><span class="bold">Introduction to Bytecode
+            Handling with ASM</span></a></p>
+        </li>
       </ul>
     </div>
     <div id="step-div">
