--- a/Security/OAuth2-OIDC.html
+++ b/Security/OAuth2-OIDC.html
@@ -789,7 +789,7 @@ keycloak    | 2025-04-26 15:14:38,148 INFO  [io.quarkus] (main) Installed featur
         <div class="gen-src-body">
           <pre>###
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   26 Apr 2025
 ###
 
@@ -1174,7 +1174,7 @@ Press CTRL+C to quit
         <div class="gen-src-body">
           <pre>###
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   26 Apr 2025
 ###
 
@@ -1324,7 +1324,7 @@ if __name__ == '__main__':
         <div class="gen-src-body">
           <pre>###
 # @Author: Bhaskar S
-# @Blog:   https://www.polarsparc.com
+# @Blog:   https://polarsparc.github.io
 # @Date:   26 Apr 2026
 ###
 
